<resources>
    <string name="app_name">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button">LOGIN</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>


</resources>
